# staying-the-course-code

./: setup.cfg  tox.ini
examples/: plot2d.py  plot3d.py  pseudosphere.py  sampling_dynamical_system.py  sphere.py
src/staying_the_course/: coordinates.py  diffusion_map_coordinates.py  diffusion_maps.py  gaussian_process.py  isocline_field.py  metropolis.py  potential.py
tests/: test_coordinates.py
