[metadata]
name = staying-the-course
version = 0.0.1
author = Juan M. Bello-Rivas
author_email = jmbr@superadditive.com
url = https://github.com/jmbr/staying-the-course-code

[options]
package_dir =
    = src
packages = find:

python_requires = >= 3.8

install_requires =
    numpy
    scipy
    matplotlib
    seaborn
    mayavi
    jaxlib==0.3.7
    jax==0.3.7

[options.packages.find]
where = src
include = staying_the_course

[flake8]
ignore = E402,W503
